--- a/src/scss/components/_shopbycat.scss
+++ b/src/scss/components/_shopbycat.scss
@@ -3,10 +3,13 @@
     // background: red;
     height: 110vh;
     width: 100%;
+    max-width: 1600px;
     text-align: center;
     padding: 10vh 0;
     display: flex;
     flex-direction: column;
+    // align-items: center;
+    margin: 0 auto;
   }
 
   &__Headline {
@@ -25,11 +28,13 @@
     height: 180px;
     margin: 2vh 10px;
     background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding: 10px 30px;
+    box-shadow: 2px 4px 4px grey;
 
     & .CatLink {
       color: white;
@@ -41,12 +46,13 @@
       &:hover {
         background: white;
         color: black;
+        opacity: 0.3;
       }
     }
 
     &--misc {
       background-image: url("../assets/aesthetic-bones-crystal-herbs-Favim.com-5181930.jpeg");
-      background-position: center;
+      background-position: 45%;
       flex-grow: 1;
     }
     &--herbsandoils {
