--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 // Components
 @import "components/header";
 @import "components/shopbycat";
+@import "components/links";
 
 // @import "components/links";
 
