--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/header";
 @import "components/shopbycat";
 @import "components/links";
+@import "components/extras";
 
 // @import "components/links";
 
